[project]
name = "consist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zneedell", email = "zneedell@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dlt>=1.18.2",
    "duckdb>=1.4.2",
    "duckdb-engine>=0.17.0",
    "h5py>=3.15.1",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "rich>=13.7.1",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "tables>=3.10.2",
    "tqdm>=4.67.1",
    "typer>=0.12.3",
    "xarray>=2025.11.0",
    "zarr>=2.18,<3",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "alembic>=1.17.2",
    "black>=25.11.0",
    "docker>=7.1.0",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.1",
    "polars>=1.35.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.6",
    "typer>=0.12.3",
]

[tool.pytest.ini_options]
markers = [
    "heavy: marks tests as heavyweight/long-running",
    "timeout: marks tests with explicit timeout expectations",
]
