[project]
name = "consist"
version = "0.1.0"
description = "Provenance tracking, intelligent caching, and data virtualization for scientific simulation workflows."
readme = "README.md"
authors = [
    { name = "Zach Needell", email = "zaneedell@lbl.gov" }
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.2",
    "duckdb-engine>=0.17.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "rich>=13.7.1",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "tqdm>=4.67.1",
    "typer>=0.12.3",
]
keywords = ["provenance", "caching", "lineage", "reproducibility", "duckdb", "scientific-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.scripts]
consist = "consist.cli:app"

[project.optional-dependencies]
docker = ["docker>=7.1.0"]
hdf5 = ["h5py>=3.15.1", "tables>=3.10.2"]
ingest = ["dlt>=1.18.2"]
netcdf = ["cftime>=1.6.0", "netCDF4>=1.6.0", "xarray>=2025.11.0"]
zarr = ["xarray>=2025.11.0", "zarr>=2.18,<3"]

# Convenience extras
all = [
    "cftime>=1.6.0",
    "docker>=7.1.0",
    "dlt>=1.18.2",
    "h5py>=3.15.1",
    "netCDF4>=1.6.0",
    "tables>=3.10.2",
    "xarray>=2025.11.0",
    "zarr>=2.18,<3",
]
bench = ["polars>=1.35.2"]
docs = ["mkdocs-material>=9.7.0", "mkdocstrings[python]>=1.0.0"]
test = ["pytest>=9.0.1", "pytest-cov>=7.0.0", "pytest-mock>=3.15.1"]
dev = [
    "black>=25.11.0",
    "docker>=7.1.0",
    "dlt>=1.18.2",
    "h5py>=3.15.1",
    "polars>=1.35.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.6",
    "tables>=3.10.2",
    "xarray>=2025.11.0",
    "zarr>=2.18,<3",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "alembic>=1.17.2",
    "black>=25.11.0",
    "docker>=7.1.0",
    "dlt>=1.18.2",
    "h5py>=3.15.1",
    "polars>=1.35.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.6",
    "tables>=3.10.2",
    "xarray>=2025.11.0",
    "zarr>=2.18,<3",
]
docs = [
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
    "mkdocstrings-python>=2.0.0",
    "zensical>=0.0.11",
]

[tool.pytest.ini_options]
markers = [
    "heavy: marks tests as heavyweight/long-running",
    "timeout: marks tests with explicit timeout expectations",
]
